--- a/src/components/navbar/topbar/Topbar.module.css
+++ b/src/components/navbar/topbar/Topbar.module.css
@@ -1,5 +1,5 @@
 .topbar {
-  @apply bg-teal-900 bg-transparent font-serif flex justify-around h-20  p-2 text-white;
+  @apply bg-myTheme bg-transparent font-serif flex justify-around h-20  p-2 text-white;
 }
 .left_top {
   @apply flex items-center;
@@ -8,16 +8,16 @@
   @apply block md:hidden mx-2 cursor-pointer   fill-current text-white;
 }
 .logo {
-  @apply font-semibold text-3xl font-serif my-auto text-yellow-400;
+  @apply font-semibold text-3xl font-serif my-auto text-white;
 }
 .searchOption {
   @apply hidden w-2/3  sm:flex items-center;
 }
 .dropdown {
-  @apply w-24 bg-white h-10 z-50 ml-4 rounded-l-md border-r-2 relative;
+  @apply w-full bg-white h-10 z-50 ml-4 rounded-l-md border-r-2 relative;
 }
 .dropdown_btn {
-  @apply flex items-center p-2 text-gray-400  rounded-md;
+  @apply flex w-full items-center px-4 text-gray-600  rounded-md;
 }
 .dropdown_content {
   @apply absolute  py-2 bg-white  rounded-md shadow-xl w-44;
@@ -26,7 +26,7 @@
   @apply block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white;
 }
 .searchInput {
-  @apply group h-10 w-full;
+  @apply p-2  focus:outline-none  rounded-md md:w-72  focus:ring focus:border-blue-300;
 }
 .searchIcon {
   @apply bg-orange-400 fill-current h-10 text-black mr-4 px-4 py-2 rounded-r-md;
