--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,6 @@
     transform: translateY(0px);
   }
 }
+/* const colors = ["green","khaki","red","blue","gray","lightgray","dark gray","crimson","yellow","yellow green","Medium Violet Red",
+
+"gainsboro","chocolate","aqua","dark blue","midnight blue","dark red","tan" ]; */
