--- a/src/components/navbar/topbar/Topbar.module.css
+++ b/src/components/navbar/topbar/Topbar.module.css
@@ -1,5 +1,5 @@
 .topbar {
-  @apply bg-myTheme bg-transparent font-serif flex justify-around h-20  p-2 text-white;
+  @apply bg-myTheme z-50 sticky top-0  font-serif flex justify-around h-20  p-2 text-white;
 }
 .left_top {
   @apply flex items-center;
@@ -14,19 +14,20 @@
   @apply hidden w-2/3  sm:flex items-center;
 }
 .dropdown {
-  @apply w-full bg-white h-10 z-50 ml-4 rounded-l-md border-r-2 relative;
+  @apply bg-white  z-50 ml-4  relative;
 }
 .dropdown_btn {
-  @apply flex w-full items-center px-4 text-gray-600  rounded-md;
+  @apply flex justify-center items-center h-10 px-4 text-gray-600;
 }
 .dropdown_content {
-  @apply absolute  py-2 bg-white  rounded-md shadow-xl w-44;
+  @apply absolute z-50 py-2 bg-white   w-32;
 }
 .dropdown_link {
-  @apply block px-4 py-2 text-sm text-gray-300 text-gray-700 hover:bg-gray-400 hover:text-white;
+  @apply block px-4 py-2  text-black    hover:text-teal-900;
 }
+
 .searchInput {
-  @apply p-2  focus:outline-none  rounded-md md:w-72  focus:ring focus:border-blue-300;
+  @apply p-2  h-10  w-full sm:w-2/3 appearance-none block  bg-gray-200 text-gray-700 border border-gray-200  leading-tight focus:outline-none focus:bg-white focus:border-gray-500;
 }
 .searchIcon {
   @apply bg-orange-400 fill-current h-10 text-black mr-4 px-4 py-2 rounded-r-md;
