--- a/src/components/admin/products/addProduct/Addproduct.module.css
+++ b/src/components/admin/products/addProduct/Addproduct.module.css
@@ -19,6 +19,9 @@
 .form_input {
   @apply shadow  appearance-none border-0 text-gray-900 rounded w-full py-2 px-3  focus:outline-none focus:ring focus:border-blue-800;
 }
+.form_input_discount {
+  @apply shadow m-2 appearance-none border-0 text-gray-900 rounded w-full py-2 px-3  focus:outline-none focus:ring focus:border-blue-800;
+}
 .form_input_labels {
   @apply block  text-sm font-bold mb-2;
 }
