--- a/src/components/Home/slider/slider.css
+++ b/src/components/Home/slider/slider.css
@@ -1,9 +1,9 @@
 .sin-slider-blog {
   position: relative;
 }
-.slider-box {
+/* .slider-box {
   height: 600px;
-}
+} */
 .slider-blog-img {
   background: black;
   overflow: hidden;
