--- a/src/components/Home/navbar/topbar/Topbar.module.css
+++ b/src/components/Home/navbar/topbar/Topbar.module.css
@@ -1,5 +1,5 @@
 .topbar {
-  @apply bg-myTheme z-50 sticky top-0  font-serif flex justify-around h-20  pr-2 text-white;
+  @apply bg-myTheme z-50 sticky top-0  font-serif flex justify-around items-center h-20  pr-2 text-white;
 }
 .left_top {
   @apply flex items-center;
@@ -11,7 +11,7 @@
   @apply font-semibold m-2 text-3xl font-serif my-auto text-white cursor-pointer;
 }
 .searchOption {
-  @apply hidden w-2/3  sm:flex items-center;
+  @apply md:w-2/3 sm:w-1/2 w-0 sm:block hidden;
 }
 .dropdown {
   @apply bg-white  z-50 ml-4  relative;
